compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> global_variables_declaration functions_definition entry_point_definition
Rule 2     start -> global_variables_declaration entry_point_definition
Rule 3     start -> functions_definition entry_point_definition
Rule 4     start -> entry_point_definition
Rule 5     global_variables_declaration -> GLOBAL variables_declaration
Rule 6     functions_definition -> functions_definition single_function_definition
Rule 7     functions_definition -> single_function_definition
Rule 8     single_function_definition -> FUNCTION type ID LPAREN function_definition_params RPAREN local_variables_declaration instruction_block
Rule 9     single_function_definition -> FUNCTION type ID LPAREN function_definition_params RPAREN instruction_block
Rule 10    single_function_definition -> FUNCTION type ID LPAREN RPAREN local_variables_declaration instruction_block
Rule 11    single_function_definition -> FUNCTION type ID LPAREN RPAREN instruction_block
Rule 12    single_function_definition -> FUNCTION VOID ID LPAREN function_definition_params RPAREN local_variables_declaration instruction_block
Rule 13    single_function_definition -> FUNCTION VOID ID LPAREN function_definition_params RPAREN instruction_block
Rule 14    single_function_definition -> FUNCTION VOID ID LPAREN RPAREN local_variables_declaration instruction_block
Rule 15    single_function_definition -> FUNCTION VOID ID LPAREN RPAREN instruction_block
Rule 16    function_definition_params -> function_definition_params COMMA single_function_definition_param
Rule 17    function_definition_params -> single_function_definition_param
Rule 18    single_function_definition_param -> type ID
Rule 19    entry_point_definition -> START LPAREN RPAREN local_variables_declaration instruction_block
Rule 20    entry_point_definition -> START LPAREN RPAREN instruction_block
Rule 21    local_variables_declaration -> LOCAL variables_declaration
Rule 22    variables_declaration -> VARIABLES COLON distinct_type_variables_declaration
Rule 23    distinct_type_variables_declaration -> distinct_type_variables_declaration shared_type_variables_declaration
Rule 24    distinct_type_variables_declaration -> shared_type_variables_declaration
Rule 25    shared_type_variables_declaration -> type shared_type_variables_declaration_list SEMI
Rule 26    shared_type_variables_declaration_list -> shared_type_variables_declaration_list COMMA single_variable_declaration
Rule 27    shared_type_variables_declaration_list -> single_variable_declaration
Rule 28    single_variable_declaration -> ID dim_definition dim_definition
Rule 29    single_variable_declaration -> ID dim_definition
Rule 30    single_variable_declaration -> ID
Rule 31    dim_definition -> LBRACKET CONST_INT RBRACKET
Rule 32    instruction_block -> LBRACE statements RBRACE
Rule 33    instruction_block -> LBRACE RBRACE
Rule 34    statements -> single_statement
Rule 35    single_statement -> assignment
Rule 36    single_statement -> function_call
Rule 37    single_statement -> read
Rule 38    single_statement -> print
Rule 39    single_statement -> conditional
Rule 40    single_statement -> loop
Rule 41    single_statement -> return
Rule 42    assignment -> variable_access ASGMT expr SEMI
Rule 43    assignment -> variable_access ASGMT read
Rule 44    variable_access -> ID dim_access dim_access
Rule 45    variable_access -> ID dim_access
Rule 46    variable_access -> ID
Rule 47    dim_access -> LBRACKET expr RBRACKET
Rule 48    function_call -> ID LPAREN function_call_params RPAREN SEMI
Rule 49    function_call -> ID LPAREN RPAREN SEMI
Rule 50    function_call_params -> function_call_params COMMA single_function_call_param
Rule 51    function_call_params -> single_function_call_param
Rule 52    single_function_call_param -> expr
Rule 53    read -> READ LPAREN RPAREN SEMI
Rule 54    print -> PRINT LPAREN print_params RPAREN SEMI
Rule 55    print -> PRINT LPAREN RPAREN SEMI
Rule 56    print_params -> print_params COMMA single_print_param
Rule 57    print_params -> single_print_param
Rule 58    single_print_param -> expr
Rule 59    single_print_param -> CONST_STRING
Rule 60    conditional -> IF LPAREN expr RPAREN instruction_block ELSE instruction_block
Rule 61    conditional -> IF LPAREN expr RPAREN instruction_block
Rule 62    loop -> while
Rule 63    loop -> for
Rule 64    while -> WHILE LPAREN expr RPAREN instruction_block
Rule 65    for -> FROM LPAREN ID ASGMT CONST_INT COLON CONST_INT COLON CONST_INT RPAREN instruction_block
Rule 66    for -> FROM LPAREN ID ASGMT CONST_INT COLON CONST_INT RPAREN instruction_block
Rule 67    return -> RETURN expr SEMI
Rule 68    return -> RETURN SEMI
Rule 69    expr -> expr OR and_expr
Rule 70    expr -> and_expr
Rule 71    and_expr -> equality_expr AND equality_expr
Rule 72    and_expr -> equality_expr
Rule 73    equality_expr -> relational_expr EQUAL relational_expr
Rule 74    equality_expr -> relational_expr NEQUAL relational_expr
Rule 75    equality_expr -> relational_expr
Rule 76    relational_expr -> additive_expr LTHAN_EQUAL additive_expr
Rule 77    relational_expr -> additive_expr LTHAN additive_expr
Rule 78    relational_expr -> additive_expr GTHAN_EQUAL additive_expr
Rule 79    relational_expr -> additive_expr GTHAN additive_expr
Rule 80    relational_expr -> additive_expr
Rule 81    additive_expr -> multiplicative_expr PLUS multiplicative_expr
Rule 82    additive_expr -> multiplicative_expr MINUS multiplicative_expr
Rule 83    additive_expr -> multiplicative_expr
Rule 84    multiplicative_expr -> unary_expr TIMES unary_expr
Rule 85    multiplicative_expr -> unary_expr DIVIDE unary_expr
Rule 86    multiplicative_expr -> unary_expr MODULO unary_expr
Rule 87    multiplicative_expr -> unary_expr
Rule 88    unary_expr -> MINUS postfix_expr
Rule 89    unary_expr -> PLUS postfix_expr
Rule 90    unary_expr -> NOT postfix_expr
Rule 91    unary_expr -> postfix_expr
Rule 92    postfix_expr -> LPAREN expr RPAREN
Rule 93    postfix_expr -> variable_access
Rule 94    postfix_expr -> function_call
Rule 95    postfix_expr -> constant
Rule 96    constant -> CONST_INT
Rule 97    constant -> CONST_REAL
Rule 98    constant -> CONST_CHAR
Rule 99    constant -> constant_bool
Rule 100   constant_bool -> TRUE
Rule 101   constant_bool -> FALSE
Rule 102   type -> INT
Rule 103   type -> REAL
Rule 104   type -> CHAR
Rule 105   type -> BOOL

Terminals, with rules where they appear

AND                  : 71
ASGMT                : 42 43 65 66
BOOL                 : 105
CHAR                 : 104
COLON                : 22 65 65 66
COMMA                : 16 26 50 56
CONST_CHAR           : 98
CONST_INT            : 31 65 65 65 66 66 96
CONST_REAL           : 97
CONST_STRING         : 59
DIVIDE               : 85
ELSE                 : 60
EQUAL                : 73
FALSE                : 101
FROM                 : 65 66
FUNCTION             : 8 9 10 11 12 13 14 15
GLOBAL               : 5
GTHAN                : 79
GTHAN_EQUAL          : 78
ID                   : 8 9 10 11 12 13 14 15 18 28 29 30 44 45 46 48 49 65 66
IF                   : 60 61
INT                  : 102
LBRACE               : 32 33
LBRACKET             : 31 47
LOCAL                : 21
LPAREN               : 8 9 10 11 12 13 14 15 19 20 48 49 53 54 55 60 61 64 65 66 92
LTHAN                : 77
LTHAN_EQUAL          : 76
MINUS                : 82 88
MODULO               : 86
NEQUAL               : 74
NOT                  : 90
OR                   : 69
PLUS                 : 81 89
PRINT                : 54 55
RBRACE               : 32 33
RBRACKET             : 31 47
READ                 : 53
REAL                 : 103
RETURN               : 67 68
RPAREN               : 8 9 10 11 12 13 14 15 19 20 48 49 53 54 55 60 61 64 65 66 92
SEMI                 : 25 42 48 49 53 54 55 67 68
START                : 19 20
TIMES                : 84
TRUE                 : 100
VARIABLES            : 22
VOID                 : 12 13 14 15
WHILE                : 64
error                : 

Nonterminals, with rules where they appear

additive_expr        : 76 76 77 77 78 78 79 79 80
and_expr             : 69 70
assignment           : 35
conditional          : 39
constant             : 95
constant_bool        : 99
dim_access           : 44 44 45
dim_definition       : 28 28 29
distinct_type_variables_declaration : 22 23
entry_point_definition : 1 2 3 4
equality_expr        : 71 71 72
expr                 : 42 47 52 58 60 61 64 67 69 92
for                  : 63
function_call        : 36 94
function_call_params : 48 50
function_definition_params : 8 9 12 13 16
functions_definition : 1 3 6
global_variables_declaration : 1 2
instruction_block    : 8 9 10 11 12 13 14 15 19 20 60 60 61 64 65 66
local_variables_declaration : 8 10 12 14 19
loop                 : 40
multiplicative_expr  : 81 81 82 82 83
postfix_expr         : 88 89 90 91
print                : 38
print_params         : 54 56
read                 : 37 43
relational_expr      : 73 73 74 74 75
return               : 41
shared_type_variables_declaration : 23 24
shared_type_variables_declaration_list : 25 26
single_function_call_param : 50 51
single_function_definition : 6 7
single_function_definition_param : 16 17
single_print_param   : 56 57
single_statement     : 34
single_variable_declaration : 26 27
start                : 0
statements           : 32
type                 : 8 9 10 11 18 25
unary_expr           : 84 84 85 85 86 86 87
variable_access      : 42 43 93
variables_declaration : 5 21
while                : 62

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . global_variables_declaration functions_definition entry_point_definition
    (2) start -> . global_variables_declaration entry_point_definition
    (3) start -> . functions_definition entry_point_definition
    (4) start -> . entry_point_definition
    (5) global_variables_declaration -> . GLOBAL variables_declaration
    (6) functions_definition -> . functions_definition single_function_definition
    (7) functions_definition -> . single_function_definition
    (19) entry_point_definition -> . START LPAREN RPAREN local_variables_declaration instruction_block
    (20) entry_point_definition -> . START LPAREN RPAREN instruction_block
    (8) single_function_definition -> . FUNCTION type ID LPAREN function_definition_params RPAREN local_variables_declaration instruction_block
    (9) single_function_definition -> . FUNCTION type ID LPAREN function_definition_params RPAREN instruction_block
    (10) single_function_definition -> . FUNCTION type ID LPAREN RPAREN local_variables_declaration instruction_block
    (11) single_function_definition -> . FUNCTION type ID LPAREN RPAREN instruction_block
    (12) single_function_definition -> . FUNCTION VOID ID LPAREN function_definition_params RPAREN local_variables_declaration instruction_block
    (13) single_function_definition -> . FUNCTION VOID ID LPAREN function_definition_params RPAREN instruction_block
    (14) single_function_definition -> . FUNCTION VOID ID LPAREN RPAREN local_variables_declaration instruction_block
    (15) single_function_definition -> . FUNCTION VOID ID LPAREN RPAREN instruction_block

    GLOBAL          shift and go to state 5
    START           shift and go to state 7
    FUNCTION        shift and go to state 8

    start                          shift and go to state 1
    global_variables_declaration   shift and go to state 2
    functions_definition           shift and go to state 3
    entry_point_definition         shift and go to state 4
    single_function_definition     shift and go to state 6

state 1

    (0) S' -> start .



state 2

    (1) start -> global_variables_declaration . functions_definition entry_point_definition
    (2) start -> global_variables_declaration . entry_point_definition
    (6) functions_definition -> . functions_definition single_function_definition
    (7) functions_definition -> . single_function_definition
    (19) entry_point_definition -> . START LPAREN RPAREN local_variables_declaration instruction_block
    (20) entry_point_definition -> . START LPAREN RPAREN instruction_block
    (8) single_function_definition -> . FUNCTION type ID LPAREN function_definition_params RPAREN local_variables_declaration instruction_block
    (9) single_function_definition -> . FUNCTION type ID LPAREN function_definition_params RPAREN instruction_block
    (10) single_function_definition -> . FUNCTION type ID LPAREN RPAREN local_variables_declaration instruction_block
    (11) single_function_definition -> . FUNCTION type ID LPAREN RPAREN instruction_block
    (12) single_function_definition -> . FUNCTION VOID ID LPAREN function_definition_params RPAREN local_variables_declaration instruction_block
    (13) single_function_definition -> . FUNCTION VOID ID LPAREN function_definition_params RPAREN instruction_block
    (14) single_function_definition -> . FUNCTION VOID ID LPAREN RPAREN local_variables_declaration instruction_block
    (15) single_function_definition -> . FUNCTION VOID ID LPAREN RPAREN instruction_block

    START           shift and go to state 7
    FUNCTION        shift and go to state 8

    functions_definition           shift and go to state 9
    entry_point_definition         shift and go to state 10
    single_function_definition     shift and go to state 6

state 3

    (3) start -> functions_definition . entry_point_definition
    (6) functions_definition -> functions_definition . single_function_definition
    (19) entry_point_definition -> . START LPAREN RPAREN local_variables_declaration instruction_block
    (20) entry_point_definition -> . START LPAREN RPAREN instruction_block
    (8) single_function_definition -> . FUNCTION type ID LPAREN function_definition_params RPAREN local_variables_declaration instruction_block
    (9) single_function_definition -> . FUNCTION type ID LPAREN function_definition_params RPAREN instruction_block
    (10) single_function_definition -> . FUNCTION type ID LPAREN RPAREN local_variables_declaration instruction_block
    (11) single_function_definition -> . FUNCTION type ID LPAREN RPAREN instruction_block
    (12) single_function_definition -> . FUNCTION VOID ID LPAREN function_definition_params RPAREN local_variables_declaration instruction_block
    (13) single_function_definition -> . FUNCTION VOID ID LPAREN function_definition_params RPAREN instruction_block
    (14) single_function_definition -> . FUNCTION VOID ID LPAREN RPAREN local_variables_declaration instruction_block
    (15) single_function_definition -> . FUNCTION VOID ID LPAREN RPAREN instruction_block

    START           shift and go to state 7
    FUNCTION        shift and go to state 8

    entry_point_definition         shift and go to state 11
    single_function_definition     shift and go to state 12

state 4

    (4) start -> entry_point_definition .

    $end            reduce using rule 4 (start -> entry_point_definition .)


state 5

    (5) global_variables_declaration -> GLOBAL . variables_declaration
    (22) variables_declaration -> . VARIABLES COLON distinct_type_variables_declaration

    VARIABLES       shift and go to state 14

    variables_declaration          shift and go to state 13

state 6

    (7) functions_definition -> single_function_definition .

    START           reduce using rule 7 (functions_definition -> single_function_definition .)
    FUNCTION        reduce using rule 7 (functions_definition -> single_function_definition .)


state 7

    (19) entry_point_definition -> START . LPAREN RPAREN local_variables_declaration instruction_block
    (20) entry_point_definition -> START . LPAREN RPAREN instruction_block

    LPAREN          shift and go to state 15


state 8

    (8) single_function_definition -> FUNCTION . type ID LPAREN function_definition_params RPAREN local_variables_declaration instruction_block
    (9) single_function_definition -> FUNCTION . type ID LPAREN function_definition_params RPAREN instruction_block
    (10) single_function_definition -> FUNCTION . type ID LPAREN RPAREN local_variables_declaration instruction_block
    (11) single_function_definition -> FUNCTION . type ID LPAREN RPAREN instruction_block
    (12) single_function_definition -> FUNCTION . VOID ID LPAREN function_definition_params RPAREN local_variables_declaration instruction_block
    (13) single_function_definition -> FUNCTION . VOID ID LPAREN function_definition_params RPAREN instruction_block
    (14) single_function_definition -> FUNCTION . VOID ID LPAREN RPAREN local_variables_declaration instruction_block
    (15) single_function_definition -> FUNCTION . VOID ID LPAREN RPAREN instruction_block
    (102) type -> . INT
    (103) type -> . REAL
    (104) type -> . CHAR
    (105) type -> . BOOL

    VOID            shift and go to state 17
    INT             shift and go to state 18
    REAL            shift and go to state 19
    CHAR            shift and go to state 20
    BOOL            shift and go to state 21

    type                           shift and go to state 16

state 9

    (1) start -> global_variables_declaration functions_definition . entry_point_definition
    (6) functions_definition -> functions_definition . single_function_definition
    (19) entry_point_definition -> . START LPAREN RPAREN local_variables_declaration instruction_block
    (20) entry_point_definition -> . START LPAREN RPAREN instruction_block
    (8) single_function_definition -> . FUNCTION type ID LPAREN function_definition_params RPAREN local_variables_declaration instruction_block
    (9) single_function_definition -> . FUNCTION type ID LPAREN function_definition_params RPAREN instruction_block
    (10) single_function_definition -> . FUNCTION type ID LPAREN RPAREN local_variables_declaration instruction_block
    (11) single_function_definition -> . FUNCTION type ID LPAREN RPAREN instruction_block
    (12) single_function_definition -> . FUNCTION VOID ID LPAREN function_definition_params RPAREN local_variables_declaration instruction_block
    (13) single_function_definition -> . FUNCTION VOID ID LPAREN function_definition_params RPAREN instruction_block
    (14) single_function_definition -> . FUNCTION VOID ID LPAREN RPAREN local_variables_declaration instruction_block
    (15) single_function_definition -> . FUNCTION VOID ID LPAREN RPAREN instruction_block

    START           shift and go to state 7
    FUNCTION        shift and go to state 8

    entry_point_definition         shift and go to state 22
    single_function_definition     shift and go to state 12

state 10

    (2) start -> global_variables_declaration entry_point_definition .

    $end            reduce using rule 2 (start -> global_variables_declaration entry_point_definition .)


state 11

    (3) start -> functions_definition entry_point_definition .

    $end            reduce using rule 3 (start -> functions_definition entry_point_definition .)


state 12

    (6) functions_definition -> functions_definition single_function_definition .

    START           reduce using rule 6 (functions_definition -> functions_definition single_function_definition .)
    FUNCTION        reduce using rule 6 (functions_definition -> functions_definition single_function_definition .)


state 13

    (5) global_variables_declaration -> GLOBAL variables_declaration .

    START           reduce using rule 5 (global_variables_declaration -> GLOBAL variables_declaration .)
    FUNCTION        reduce using rule 5 (global_variables_declaration -> GLOBAL variables_declaration .)


state 14

    (22) variables_declaration -> VARIABLES . COLON distinct_type_variables_declaration

    COLON           shift and go to state 23


state 15

    (19) entry_point_definition -> START LPAREN . RPAREN local_variables_declaration instruction_block
    (20) entry_point_definition -> START LPAREN . RPAREN instruction_block

    RPAREN          shift and go to state 24


state 16

    (8) single_function_definition -> FUNCTION type . ID LPAREN function_definition_params RPAREN local_variables_declaration instruction_block
    (9) single_function_definition -> FUNCTION type . ID LPAREN function_definition_params RPAREN instruction_block
    (10) single_function_definition -> FUNCTION type . ID LPAREN RPAREN local_variables_declaration instruction_block
    (11) single_function_definition -> FUNCTION type . ID LPAREN RPAREN instruction_block

    ID              shift and go to state 25


state 17

    (12) single_function_definition -> FUNCTION VOID . ID LPAREN function_definition_params RPAREN local_variables_declaration instruction_block
    (13) single_function_definition -> FUNCTION VOID . ID LPAREN function_definition_params RPAREN instruction_block
    (14) single_function_definition -> FUNCTION VOID . ID LPAREN RPAREN local_variables_declaration instruction_block
    (15) single_function_definition -> FUNCTION VOID . ID LPAREN RPAREN instruction_block

    ID              shift and go to state 26


state 18

    (102) type -> INT .

    ID              reduce using rule 102 (type -> INT .)


state 19

    (103) type -> REAL .

    ID              reduce using rule 103 (type -> REAL .)


state 20

    (104) type -> CHAR .

    ID              reduce using rule 104 (type -> CHAR .)


state 21

    (105) type -> BOOL .

    ID              reduce using rule 105 (type -> BOOL .)


state 22

    (1) start -> global_variables_declaration functions_definition entry_point_definition .

    $end            reduce using rule 1 (start -> global_variables_declaration functions_definition entry_point_definition .)


state 23

    (22) variables_declaration -> VARIABLES COLON . distinct_type_variables_declaration
    (23) distinct_type_variables_declaration -> . distinct_type_variables_declaration shared_type_variables_declaration
    (24) distinct_type_variables_declaration -> . shared_type_variables_declaration
    (25) shared_type_variables_declaration -> . type shared_type_variables_declaration_list SEMI
    (102) type -> . INT
    (103) type -> . REAL
    (104) type -> . CHAR
    (105) type -> . BOOL

    INT             shift and go to state 18
    REAL            shift and go to state 19
    CHAR            shift and go to state 20
    BOOL            shift and go to state 21

    distinct_type_variables_declaration shift and go to state 27
    shared_type_variables_declaration shift and go to state 28
    type                           shift and go to state 29

state 24

    (19) entry_point_definition -> START LPAREN RPAREN . local_variables_declaration instruction_block
    (20) entry_point_definition -> START LPAREN RPAREN . instruction_block
    (21) local_variables_declaration -> . LOCAL variables_declaration
    (32) instruction_block -> . LBRACE statements RBRACE
    (33) instruction_block -> . LBRACE RBRACE

    LOCAL           shift and go to state 32
    LBRACE          shift and go to state 33

    local_variables_declaration    shift and go to state 30
    instruction_block              shift and go to state 31

state 25

    (8) single_function_definition -> FUNCTION type ID . LPAREN function_definition_params RPAREN local_variables_declaration instruction_block
    (9) single_function_definition -> FUNCTION type ID . LPAREN function_definition_params RPAREN instruction_block
    (10) single_function_definition -> FUNCTION type ID . LPAREN RPAREN local_variables_declaration instruction_block
    (11) single_function_definition -> FUNCTION type ID . LPAREN RPAREN instruction_block

    LPAREN          shift and go to state 34


state 26

    (12) single_function_definition -> FUNCTION VOID ID . LPAREN function_definition_params RPAREN local_variables_declaration instruction_block
    (13) single_function_definition -> FUNCTION VOID ID . LPAREN function_definition_params RPAREN instruction_block
    (14) single_function_definition -> FUNCTION VOID ID . LPAREN RPAREN local_variables_declaration instruction_block
    (15) single_function_definition -> FUNCTION VOID ID . LPAREN RPAREN instruction_block

    LPAREN          shift and go to state 35


state 27

    (22) variables_declaration -> VARIABLES COLON distinct_type_variables_declaration .
    (23) distinct_type_variables_declaration -> distinct_type_variables_declaration . shared_type_variables_declaration
    (25) shared_type_variables_declaration -> . type shared_type_variables_declaration_list SEMI
    (102) type -> . INT
    (103) type -> . REAL
    (104) type -> . CHAR
    (105) type -> . BOOL

    START           reduce using rule 22 (variables_declaration -> VARIABLES COLON distinct_type_variables_declaration .)
    FUNCTION        reduce using rule 22 (variables_declaration -> VARIABLES COLON distinct_type_variables_declaration .)
    LBRACE          reduce using rule 22 (variables_declaration -> VARIABLES COLON distinct_type_variables_declaration .)
    INT             shift and go to state 18
    REAL            shift and go to state 19
    CHAR            shift and go to state 20
    BOOL            shift and go to state 21

    shared_type_variables_declaration shift and go to state 36
    type                           shift and go to state 29

state 28

    (24) distinct_type_variables_declaration -> shared_type_variables_declaration .

    INT             reduce using rule 24 (distinct_type_variables_declaration -> shared_type_variables_declaration .)
    REAL            reduce using rule 24 (distinct_type_variables_declaration -> shared_type_variables_declaration .)
    CHAR            reduce using rule 24 (distinct_type_variables_declaration -> shared_type_variables_declaration .)
    BOOL            reduce using rule 24 (distinct_type_variables_declaration -> shared_type_variables_declaration .)
    START           reduce using rule 24 (distinct_type_variables_declaration -> shared_type_variables_declaration .)
    FUNCTION        reduce using rule 24 (distinct_type_variables_declaration -> shared_type_variables_declaration .)
    LBRACE          reduce using rule 24 (distinct_type_variables_declaration -> shared_type_variables_declaration .)


state 29

    (25) shared_type_variables_declaration -> type . shared_type_variables_declaration_list SEMI
    (26) shared_type_variables_declaration_list -> . shared_type_variables_declaration_list COMMA single_variable_declaration
    (27) shared_type_variables_declaration_list -> . single_variable_declaration
    (28) single_variable_declaration -> . ID dim_definition dim_definition
    (29) single_variable_declaration -> . ID dim_definition
    (30) single_variable_declaration -> . ID

    ID              shift and go to state 39

    shared_type_variables_declaration_list shift and go to state 37
    single_variable_declaration    shift and go to state 38

state 30

    (19) entry_point_definition -> START LPAREN RPAREN local_variables_declaration . instruction_block
    (32) instruction_block -> . LBRACE statements RBRACE
    (33) instruction_block -> . LBRACE RBRACE

    LBRACE          shift and go to state 33

    instruction_block              shift and go to state 40

state 31

    (20) entry_point_definition -> START LPAREN RPAREN instruction_block .

    $end            reduce using rule 20 (entry_point_definition -> START LPAREN RPAREN instruction_block .)


state 32

    (21) local_variables_declaration -> LOCAL . variables_declaration
    (22) variables_declaration -> . VARIABLES COLON distinct_type_variables_declaration

    VARIABLES       shift and go to state 14

    variables_declaration          shift and go to state 41

state 33

    (32) instruction_block -> LBRACE . statements RBRACE
    (33) instruction_block -> LBRACE . RBRACE
    (34) statements -> . single_statement
    (35) single_statement -> . assignment
    (36) single_statement -> . function_call
    (37) single_statement -> . read
    (38) single_statement -> . print
    (39) single_statement -> . conditional
    (40) single_statement -> . loop
    (41) single_statement -> . return
    (42) assignment -> . variable_access ASGMT expr SEMI
    (43) assignment -> . variable_access ASGMT read
    (48) function_call -> . ID LPAREN function_call_params RPAREN SEMI
    (49) function_call -> . ID LPAREN RPAREN SEMI
    (53) read -> . READ LPAREN RPAREN SEMI
    (54) print -> . PRINT LPAREN print_params RPAREN SEMI
    (55) print -> . PRINT LPAREN RPAREN SEMI
    (60) conditional -> . IF LPAREN expr RPAREN instruction_block ELSE instruction_block
    (61) conditional -> . IF LPAREN expr RPAREN instruction_block
    (62) loop -> . while
    (63) loop -> . for
    (67) return -> . RETURN expr SEMI
    (68) return -> . RETURN SEMI
    (44) variable_access -> . ID dim_access dim_access
    (45) variable_access -> . ID dim_access
    (46) variable_access -> . ID
    (64) while -> . WHILE LPAREN expr RPAREN instruction_block
    (65) for -> . FROM LPAREN ID ASGMT CONST_INT COLON CONST_INT COLON CONST_INT RPAREN instruction_block
    (66) for -> . FROM LPAREN ID ASGMT CONST_INT COLON CONST_INT RPAREN instruction_block

    RBRACE          shift and go to state 43
    ID              shift and go to state 53
    READ            shift and go to state 54
    PRINT           shift and go to state 55
    IF              shift and go to state 56
    RETURN          shift and go to state 59
    WHILE           shift and go to state 60
    FROM            shift and go to state 61

    statements                     shift and go to state 42
    single_statement               shift and go to state 44
    assignment                     shift and go to state 45
    function_call                  shift and go to state 46
    read                           shift and go to state 47
    print                          shift and go to state 48
    conditional                    shift and go to state 49
    loop                           shift and go to state 50
    return                         shift and go to state 51
    variable_access                shift and go to state 52
    while                          shift and go to state 57
    for                            shift and go to state 58

state 34

    (8) single_function_definition -> FUNCTION type ID LPAREN . function_definition_params RPAREN local_variables_declaration instruction_block
    (9) single_function_definition -> FUNCTION type ID LPAREN . function_definition_params RPAREN instruction_block
    (10) single_function_definition -> FUNCTION type ID LPAREN . RPAREN local_variables_declaration instruction_block
    (11) single_function_definition -> FUNCTION type ID LPAREN . RPAREN instruction_block
    (16) function_definition_params -> . function_definition_params COMMA single_function_definition_param
    (17) function_definition_params -> . single_function_definition_param
    (18) single_function_definition_param -> . type ID
    (102) type -> . INT
    (103) type -> . REAL
    (104) type -> . CHAR
    (105) type -> . BOOL

    RPAREN          shift and go to state 64
    INT             shift and go to state 18
    REAL            shift and go to state 19
    CHAR            shift and go to state 20
    BOOL            shift and go to state 21

    type                           shift and go to state 62
    function_definition_params     shift and go to state 63
    single_function_definition_param shift and go to state 65

state 35

    (12) single_function_definition -> FUNCTION VOID ID LPAREN . function_definition_params RPAREN local_variables_declaration instruction_block
    (13) single_function_definition -> FUNCTION VOID ID LPAREN . function_definition_params RPAREN instruction_block
    (14) single_function_definition -> FUNCTION VOID ID LPAREN . RPAREN local_variables_declaration instruction_block
    (15) single_function_definition -> FUNCTION VOID ID LPAREN . RPAREN instruction_block
    (16) function_definition_params -> . function_definition_params COMMA single_function_definition_param
    (17) function_definition_params -> . single_function_definition_param
    (18) single_function_definition_param -> . type ID
    (102) type -> . INT
    (103) type -> . REAL
    (104) type -> . CHAR
    (105) type -> . BOOL

    RPAREN          shift and go to state 67
    INT             shift and go to state 18
    REAL            shift and go to state 19
    CHAR            shift and go to state 20
    BOOL            shift and go to state 21

    function_definition_params     shift and go to state 66
    single_function_definition_param shift and go to state 65
    type                           shift and go to state 62

state 36

    (23) distinct_type_variables_declaration -> distinct_type_variables_declaration shared_type_variables_declaration .

    INT             reduce using rule 23 (distinct_type_variables_declaration -> distinct_type_variables_declaration shared_type_variables_declaration .)
    REAL            reduce using rule 23 (distinct_type_variables_declaration -> distinct_type_variables_declaration shared_type_variables_declaration .)
    CHAR            reduce using rule 23 (distinct_type_variables_declaration -> distinct_type_variables_declaration shared_type_variables_declaration .)
    BOOL            reduce using rule 23 (distinct_type_variables_declaration -> distinct_type_variables_declaration shared_type_variables_declaration .)
    START           reduce using rule 23 (distinct_type_variables_declaration -> distinct_type_variables_declaration shared_type_variables_declaration .)
    FUNCTION        reduce using rule 23 (distinct_type_variables_declaration -> distinct_type_variables_declaration shared_type_variables_declaration .)
    LBRACE          reduce using rule 23 (distinct_type_variables_declaration -> distinct_type_variables_declaration shared_type_variables_declaration .)


state 37

    (25) shared_type_variables_declaration -> type shared_type_variables_declaration_list . SEMI
    (26) shared_type_variables_declaration_list -> shared_type_variables_declaration_list . COMMA single_variable_declaration

    SEMI            shift and go to state 68
    COMMA           shift and go to state 69


state 38

    (27) shared_type_variables_declaration_list -> single_variable_declaration .

    SEMI            reduce using rule 27 (shared_type_variables_declaration_list -> single_variable_declaration .)
    COMMA           reduce using rule 27 (shared_type_variables_declaration_list -> single_variable_declaration .)


state 39

    (28) single_variable_declaration -> ID . dim_definition dim_definition
    (29) single_variable_declaration -> ID . dim_definition
    (30) single_variable_declaration -> ID .
    (31) dim_definition -> . LBRACKET CONST_INT RBRACKET

    SEMI            reduce using rule 30 (single_variable_declaration -> ID .)
    COMMA           reduce using rule 30 (single_variable_declaration -> ID .)
    LBRACKET        shift and go to state 71

    dim_definition                 shift and go to state 70

state 40

    (19) entry_point_definition -> START LPAREN RPAREN local_variables_declaration instruction_block .

    $end            reduce using rule 19 (entry_point_definition -> START LPAREN RPAREN local_variables_declaration instruction_block .)


state 41

    (21) local_variables_declaration -> LOCAL variables_declaration .

    LBRACE          reduce using rule 21 (local_variables_declaration -> LOCAL variables_declaration .)


state 42

    (32) instruction_block -> LBRACE statements . RBRACE

    RBRACE          shift and go to state 72


state 43

    (33) instruction_block -> LBRACE RBRACE .

    $end            reduce using rule 33 (instruction_block -> LBRACE RBRACE .)
    START           reduce using rule 33 (instruction_block -> LBRACE RBRACE .)
    FUNCTION        reduce using rule 33 (instruction_block -> LBRACE RBRACE .)
    ELSE            reduce using rule 33 (instruction_block -> LBRACE RBRACE .)
    RBRACE          reduce using rule 33 (instruction_block -> LBRACE RBRACE .)


state 44

    (34) statements -> single_statement .

    RBRACE          reduce using rule 34 (statements -> single_statement .)


state 45

    (35) single_statement -> assignment .

    RBRACE          reduce using rule 35 (single_statement -> assignment .)


state 46

    (36) single_statement -> function_call .

    RBRACE          reduce using rule 36 (single_statement -> function_call .)


state 47

    (37) single_statement -> read .

    RBRACE          reduce using rule 37 (single_statement -> read .)


state 48

    (38) single_statement -> print .

    RBRACE          reduce using rule 38 (single_statement -> print .)


state 49

    (39) single_statement -> conditional .

    RBRACE          reduce using rule 39 (single_statement -> conditional .)


state 50

    (40) single_statement -> loop .

    RBRACE          reduce using rule 40 (single_statement -> loop .)


state 51

    (41) single_statement -> return .

    RBRACE          reduce using rule 41 (single_statement -> return .)


state 52

    (42) assignment -> variable_access . ASGMT expr SEMI
    (43) assignment -> variable_access . ASGMT read

    ASGMT           shift and go to state 73


state 53

    (48) function_call -> ID . LPAREN function_call_params RPAREN SEMI
    (49) function_call -> ID . LPAREN RPAREN SEMI
    (44) variable_access -> ID . dim_access dim_access
    (45) variable_access -> ID . dim_access
    (46) variable_access -> ID .
    (47) dim_access -> . LBRACKET expr RBRACKET

    LPAREN          shift and go to state 74
    ASGMT           reduce using rule 46 (variable_access -> ID .)
    LBRACKET        shift and go to state 76

    dim_access                     shift and go to state 75

state 54

    (53) read -> READ . LPAREN RPAREN SEMI

    LPAREN          shift and go to state 77


state 55

    (54) print -> PRINT . LPAREN print_params RPAREN SEMI
    (55) print -> PRINT . LPAREN RPAREN SEMI

    LPAREN          shift and go to state 78


state 56
